--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,12 +20,16 @@
 			"extensions": [
 				"esbenp.prettier-vscode",
 				"vscode-icons-team.vscode-icons",
-				"wayou.vscode-todo-highlight"
+				"wayou.vscode-todo-highlight",
+				"helium-icon-theme",
+				"Dark Magic Night"
 			],
 			"settings": {
 				"editor.fontSize": 25,
 				"terminal.integrated.fontSize": 20,
-				"editor.wordWrap": "on"
+				"editor.wordWrap": "on",
+				"editor.mouseWheelZoom": true,
+				"editor.minimap.enabled": false,
 			}
 			
 		}
